Imports optimization